# hmm-market-regime-engine

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt  run.py
src/regime_engine/: __init__.py  cli.py  config.py  pipeline.py
src/regime_engine/analytics/: __init__.py  risk.py
src/regime_engine/data/: __init__.py  loader.py
src/regime_engine/features/: __init__.py  engineering.py
src/regime_engine/models/: __init__.py  hmm.py  vol.py
src/regime_engine/simulation/: __init__.py  monte_carlo.py
src/regime_engine/visualization/: __init__.py  tearsheet.py
tests/: conftest.py  test_engineering.py  test_hmm.py  test_loader.py  test_monte_carlo.py  test_pipeline.py  test_risk.py  test_vol.py
