[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hmm-market-regime-engine"
version = "1.0.0"
description = "S&P 500 regime detection via Gaussian HMM with EWMA vol and Student-t Monte Carlo forecasting"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "yfinance",
    "hmmlearn",
    "scikit-learn",
    "scipy",
]

[project.scripts]
regime-engine = "regime_engine.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
